--- a/dhdrnet/notebooks/Untitled.ipynb
+++ b/dhdrnet/notebooks/Untitled.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from dhdrnet.util import DATA_DIR, ROOT_DIR\n",
     "\n",
@@ -198,7 +198,9 @@
     }
    ],
    "source": [
-    "df.loc[df[\"metric\"] == \"rmse\", \"score\"] =  df.loc[df[\"metric\"] == \"rmse\", \"score\"].apply(np.sqrt)\n",
+    "df.loc[df[\"metric\"] == \"rmse\", \"score\"] = df.loc[df[\"metric\"] == \"rmse\", \"score\"].apply(\n",
+    "    np.sqrt\n",
+    ")\n",
     "df"
    ]
   },
@@ -930,7 +932,9 @@
    ],
    "source": [
     "cdf = pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_updown_2020-10-26.csv\")\n",
-    "cdf.loc[cdf[\"metric\"] == \"rmse\", \"score\"] =  cdf.loc[cdf[\"metric\"] == \"rmse\", \"score\"].apply(np.sqrt)\n",
+    "cdf.loc[cdf[\"metric\"] == \"rmse\", \"score\"] = cdf.loc[\n",
+    "    cdf[\"metric\"] == \"rmse\", \"score\"\n",
+    "].apply(np.sqrt)\n",
     "cdf"
    ]
   },
