--- a/figures/conv_choice.tex
+++ b/figures/conv_choice.tex
@@ -1,27 +1,22 @@
 \begin{tabular}{llrr}
 \toprule
-  &      &       mean &       std \\
-ev & metric &            &           \\
+  &      &       mean &        std \\
+ev & metric &            &            \\
 \midrule
-1 & perceptual &   0.199319 &  0.133344 \\
-  & psnr &  14.373488 &  4.626837 \\
-  & rmse &   0.415388 &  0.222175 \\
-  & ssim &   0.658184 &  0.263431 \\
-2 & perceptual &   0.120093 &  0.086524 \\
-  & psnr &  18.246571 &  6.062991 \\
-  & rmse &   0.295450 &  0.198601 \\
-  & ssim &   0.779540 &  0.205470 \\
-3 & perceptual &   0.075610 &  0.033702 \\
-  & psnr &  21.438571 &  4.717609 \\
-  & rmse &   0.193366 &  0.131104 \\
-  & ssim &   0.886411 &  0.110472 \\
-4 & perceptual &   0.067256 &  0.027250 \\
-  & psnr &  23.136557 &  3.147054 \\
-  & rmse &   0.138042 &  0.055359 \\
-  & ssim &   0.941384 &  0.030754 \\
-5 & perceptual &   0.093329 &  0.042967 \\
-  & psnr &  21.010614 &  4.344911 \\
-  & rmse &   0.178393 &  0.078236 \\
-  & ssim &   0.918467 &  0.048767 \\
+1 & psnr &  16.144820 &   4.237501 \\
+  & rmse &  44.319712 &  19.385214 \\
+  & ssim &   0.707827 &   0.226675 \\
+2 & psnr &  20.877057 &   5.383900 \\
+  & rmse &  27.334192 &  14.555937 \\
+  & ssim &   0.848401 &   0.141950 \\
+3 & psnr &  25.248919 &   3.031392 \\
+  & rmse &  14.784704 &   5.051738 \\
+  & ssim &   0.943758 &   0.033221 \\
+4 & psnr &  26.384000 &   3.998241 \\
+  & rmse &  13.644772 &   7.042175 \\
+  & ssim &   0.967228 &   0.020001 \\
+5 & psnr &  19.700461 &   3.322998 \\
+  & rmse &  28.345435 &  10.790692 \\
+  & ssim &   0.880723 &   0.058906 \\
 \bottomrule
 \end{tabular}
