--- a/dhdrnet/notebooks/NN Evals.ipynb
+++ b/dhdrnet/notebooks/NN Evals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -13,7 +13,7 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "/home/shane/Development/DHDRNet/data\n"
+      "/home/shane/src/DHDRNet/data\n"
      ]
     }
    ],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[724 rows x 108 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
        "[1448 rows x 36 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1748,47 +1748,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ev</th>\n",
        "      <th>name</th>\n",
        "      <th>metric</th>\n",
+       "      <th>ev</th>\n",
        "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-3.00</td>\n",
        "      <td>0030_20151008_105249_589</td>\n",
        "      <td>rmse</td>\n",
-       "      <td>0.427176</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>54.637144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-3.00</td>\n",
        "      <td>0030_20151008_105249_589</td>\n",
        "      <td>psnr</td>\n",
-       "      <td>12.038237</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>13.381044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-3.00</td>\n",
        "      <td>0030_20151008_105249_589</td>\n",
        "      <td>ssim</td>\n",
-       "      <td>0.651422</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>0.688111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-3.00</td>\n",
        "      <td>0030_20151008_105249_589</td>\n",
        "      <td>perceptual</td>\n",
-       "      <td>0.185599</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>0.168723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-2.75</td>\n",
        "      <td>0030_20151008_105249_589</td>\n",
        "      <td>rmse</td>\n",
-       "      <td>0.430278</td>\n",
+       "      <td>-2.75</td>\n",
+       "      <td>55.133444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1798,79 +1798,84 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104251</th>\n",
+       "      <th>13001467</th>\n",
+       "      <td>6FHF_20150303_115853_902</td>\n",
+       "      <td>perceptual</td>\n",
        "      <td>5.75</td>\n",
-       "      <td>0043_20160923_122514_781</td>\n",
-       "      <td>perceptual</td>\n",
-       "      <td>0.138072</td>\n",
+       "      <td>0.077148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104252</th>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0043_20160923_122514_781</td>\n",
+       "      <th>13001468</th>\n",
+       "      <td>6FHF_20150303_115853_902</td>\n",
        "      <td>rmse</td>\n",
-       "      <td>0.269203</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>21.963507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104253</th>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0043_20160923_122514_781</td>\n",
+       "      <th>13001469</th>\n",
+       "      <td>6FHF_20150303_115853_902</td>\n",
        "      <td>psnr</td>\n",
-       "      <td>15.912795</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>21.296770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104254</th>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0043_20160923_122514_781</td>\n",
+       "      <th>13001470</th>\n",
+       "      <td>6FHF_20150303_115853_902</td>\n",
        "      <td>ssim</td>\n",
-       "      <td>0.886586</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>0.944107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104255</th>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0043_20160923_122514_781</td>\n",
+       "      <th>13001471</th>\n",
+       "      <td>6FHF_20150303_115853_902</td>\n",
        "      <td>perceptual</td>\n",
-       "      <td>0.145742</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>0.076567</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>104256 rows × 4 columns</p>\n",
+       "<p>13001472 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ev                      name      metric      score\n",
-       "0      -3.00  0030_20151008_105249_589        rmse   0.427176\n",
-       "1      -3.00  0030_20151008_105249_589        psnr  12.038237\n",
-       "2      -3.00  0030_20151008_105249_589        ssim   0.651422\n",
-       "3      -3.00  0030_20151008_105249_589  perceptual   0.185599\n",
-       "4      -2.75  0030_20151008_105249_589        rmse   0.430278\n",
-       "...      ...                       ...         ...        ...\n",
-       "104251  5.75  0043_20160923_122514_781  perceptual   0.138072\n",
-       "104252  6.00  0043_20160923_122514_781        rmse   0.269203\n",
-       "104253  6.00  0043_20160923_122514_781        psnr  15.912795\n",
-       "104254  6.00  0043_20160923_122514_781        ssim   0.886586\n",
-       "104255  6.00  0043_20160923_122514_781  perceptual   0.145742\n",
+       "                              name      metric    ev      score\n",
+       "0         0030_20151008_105249_589        rmse -3.00  54.637144\n",
+       "1         0030_20151008_105249_589        psnr -3.00  13.381044\n",
+       "2         0030_20151008_105249_589        ssim -3.00   0.688111\n",
+       "3         0030_20151008_105249_589  perceptual -3.00   0.168723\n",
+       "4         0030_20151008_105249_589        rmse -2.75  55.133444\n",
+       "...                            ...         ...   ...        ...\n",
+       "13001467  6FHF_20150303_115853_902  perceptual  5.75   0.077148\n",
+       "13001468  6FHF_20150303_115853_902        rmse  6.00  21.963507\n",
+       "13001469  6FHF_20150303_115853_902        psnr  6.00  21.296770\n",
+       "13001470  6FHF_20150303_115853_902        ssim  6.00   0.944107\n",
+       "13001471  6FHF_20150303_115853_902  perceptual  6.00   0.076567\n",
        "\n",
-       "[104256 rows x 4 columns]"
+       "[13001472 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "score_df = (\n",
-    "    pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_test_2020-10-18.csv\")\n",
-    "    .drop(columns=[\"Unnamed: 0\", \"ev1\"])\n",
+    "    pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_2020-10-27.csv\")\n",
+    "    .drop(columns=[\"ev1\"])\n",
     "    .rename(columns={\"ev2\": \"ev\"})\n",
     ")\n",
+    "test_names = pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"test_current.csv\")\n",
+    "\n",
+    "score_df = score_df.set_index(\"name\")\n",
+    "score_df = score_df.loc[score_df.index.intersection(test_names[\"names\"])]\n",
+    "score_df = score_df.reset_index()\n",
     "score_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,11 +1899,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_preds(pred_str):\n",
+    "    splits = pred_str.split(\" \")\n",
+    "    return [float(s) for s in splits[1:-1] if len(s) > 0]\n",
+    "    \n",
+    "rec_df = pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"rec_preds.csv\", index_col=\"index\")\n",
+    "mobile_df = pd.read_csv( ROOT_DIR / \"precomputed_data\" / \"mobile_preds.csv\", index_col=\"index\" ) \n",
+    "res_df = pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"res_preds.csv\", index_col=\"index\")\n",
+    "squeeze_df = pd.read_csv( ROOT_DIR / \"precomputed_data\" / \"squeeze_preds.csv\", index_col=\"index\" )\n",
+    "\n",
+    "rec_df[\"ev_predictions\"] = rec_df[\"ev_predictions\"].apply(parse_preds)\n",
+    "res_df[\"ev_predictions\"] = res_df[\"ev_predictions\"].apply(parse_preds)\n",
+    "mobile_df[\"ev_predictions\"] = mobile_df[\"ev_predictions\"].apply(parse_preds)\n",
+    "squeeze_df[\"ev_predictions\"] = squeeze_df[\"ev_predictions\"].apply(parse_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "res_scores = get_scores_for_preds(res_df, score_df)\n",
+    "rec_scores = get_scores_for_preds(rec_df, score_df)\n",
     "mobile_scores = get_scores_for_preds(mobile_df, score_df)\n",
     "squeeze_scores = get_scores_for_preds(squeeze_df, score_df)"
    ]
