update notebooks with new histogram

--- a/dhdrnet/notebooks/Untitled.ipynb
+++ b/dhdrnet/notebooks/Untitled.ipynb
@@ -1677,7 +1677,10 @@
    "cell_type": "code",
    "execution_count": 162,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1688,7 +1691,10 @@
    "cell_type": "code",
    "execution_count": 163,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1716,7 +1722,10 @@
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1740,7 +1749,10 @@
    "cell_type": "code",
    "execution_count": 171,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1864,7 +1876,10 @@
    "cell_type": "code",
    "execution_count": 175,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -2008,7 +2023,10 @@
    "cell_type": "code",
    "execution_count": 176,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -2197,18 +2215,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/home/shane/.cache/pypoetry/virtualenvs/dhdrnet-CxDQYEDG-py3.8/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "DHDRNet",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "dhdrnet"
   },
   "language_info": {
