rename GenAllPairs --> DataGenerator

--- a/dhdrnet/notebooks/exposuredata.ipynb
+++ b/dhdrnet/notebooks/exposuredata.ipynb
@@ -28,7 +28,7 @@
     "import numpy as np\n",
     "from PIL import ExifTags, Image\n",
     "\n",
-    "from dhdrnet.gen_pairs import GenAllPairs\n",
+    "from dhdrnet.gen_pairs import DataGenerator\n",
     "from dhdrnet.util import ROOT_DIR\n",
     "\n",
     "plt.rcParams.update({'font.size': 14})\n",
@@ -443,7 +443,7 @@
    "source": [
     "import datetime\n",
     "\n",
-    "gen = GenAllPairs(raw_path=DATA_DIR / \"dngs\", out_path=DATA_DIR)"
+    "gen = DataGenerator(raw_path=DATA_DIR / \"dngs\", out_path=DATA_DIR)"
    ]
   },
   {
