--- a/dhdrnet/notebooks/fusion weight maps.ipynb
+++ b/dhdrnet/notebooks/fusion weight maps.ipynb
@@ -83,9 +83,9 @@
     "    for files in exposure_files\n",
     "]\n",
     "exposure_files\n",
-    "from dhdrnet.gen_pairs import GenAllPairs\n",
+    "from dhdrnet.gen_pairs import DataGenerator\n",
     "\n",
-    "generator = GenAllPairs(\n",
+    "generator = DataGenerator(\n",
     "    raw_path=DATA_DIR / \"dngs\",\n",
     "    out_path=DATA_DIR / \"correct_exposures\",\n",
     "    store_path=None,\n",
