--- a/dhdrnet/notebooks/results.ipynb
+++ b/dhdrnet/notebooks/results.ipynb
@@ -466,9 +466,9 @@
    },
    "outputs": [],
    "source": [
-    "from dhdrnet.gen_pairs import GenAllPairs\n",
+    "from dhdrnet.gen_pairs import DataGenerator\n",
     "\n",
-    "gen = GenAllPairs(raw_path=DATA_DIR / \"dngs\", out_path=DATA_DIR)"
+    "gen = DataGenerator(raw_path=DATA_DIR / \"dngs\", out_path=DATA_DIR)"
    ]
   },
   {
