removing old files, renaming references to Dataset.py --> dataset.py

--- a/dhdrnet/notebooks/NN Evals.ipynb
+++ b/dhdrnet/notebooks/NN Evals.ipynb
@@ -447,7 +447,7 @@
    "source": [
     "from torchvision.transforms import Compose, Resize, ToTensor\n",
     "\n",
-    "from dhdrnet.Dataset import RCDataset\n",
+    "from dhdrnet.dataset import RCDataset\n",
     "\n",
     "test_data = RCDataset(\n",
     "    df=pd.read_csv(ROOT_DIR / \"precomputed_data\" / \"store_current.csv\"),\n",
@@ -1100,7 +1100,7 @@
    "source": [
     "from pytorch_lightning import seed_everything\n",
     "\n",
-    "from dhdrnet.Dataset import LUTDataset, RCDataset\n",
+    "from dhdrnet.dataset import LUTDataset, RCDataset\n",
     "from dhdrnet.histogram_model import HistogramNet\n",
     "from dhdrnet.model import DHDRMobileNet_v3, DHDRSqueezeNet\n",
     "from dhdrnet.reconstruction_model import RCNet\n",
@@ -1189,7 +1189,7 @@
    },
    "outputs": [],
    "source": [
-    "from dhdrnet.Dataset import HistogramDataset\n",
+    "from dhdrnet.dataset import HistogramDataset\n",
     "rc_data = test_data\n",
     "reconstruction_loader = DataLoader(rc_data, batch_size=20, num_workers=8)\n",
     "\n",
