update to latest torch and torchvision (1.8, 0.8) and get batch loading working

--- a/dhdrnet/notebooks/OptimalPredict.ipynb
+++ b/dhdrnet/notebooks/OptimalPredict.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "minute-mentor",
+   "execution_count": 1,
+   "id": "rocky-words",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import timm\n",
@@ -19,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "endangered-cyprus",
+   "execution_count": 2,
+   "id": "approximate-participation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f4d6c7de290>"
+       "<torch._C.Generator at 0x7fd89a460570>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-calcium",
+   "id": "tight-appearance",
    "metadata": {},
    "source": [
     "Need a model that takes a sequence of images as input and chooses two among them for the best exposure fusion result"
@@ -51,275 +53,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "transparent-engagement",
+   "execution_count": 3,
+   "id": "infinite-little",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "from dhdrnet.dataset import CachingDataset\n",
+    "\n",
+    "ds = CachingDataset(\n",
+    "    data_dir=Path(\"../../data\"),\n",
+    "    transform=transforms.Compose(\n",
+    "        [transforms.ToPILImage(), transforms.Resize((300, 300)), transforms.ToTensor()]\n",
+    "    ),\n",
+    ")\n",
+    "dl = DataLoader(ds, batch_size=2, shuffle=True, num_workers=12, pin_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "alleged-projection",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "torch.Size([2, 3, 300, 300])\n",
+      "('evs', 'evs')\n"
      ]
     }
    ],
    "source": [
-    "comparator = max\n",
-    "best_score = np.nan\n",
-    "items = [1, 10, 0.03, 0.2]\n",
-    "for item in items:\n",
-    "    best_score = comparator(item, best_score)\n",
-    "\n",
-    "print(best_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "selected-reynolds",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "best_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "functioning-yacht",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "incorporate-arrival",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from pathlib import Path\n",
-    "\n",
-    "p = Path(\"./teststore.json\")\n",
-    "D = dict()\n",
-    "for i in range(10):\n",
-    "    d = tuple((f\"alalal{i}\", tuple(i + j for j in range(4))))\n",
-    "    entry = dict(entry3=i + 1919, entry4=i * i)\n",
-    "    D[d] = entry\n",
-    "    res = {**dict(entry1=d[0], entry2=d[1]), **entry}\n",
-    "    with p.open(\"a\") as s:\n",
-    "        json.dump(res, s, separators=(\",\", \":\"))\n",
-    "        s.write(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "logical-presence",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_json(p, lines=True, orient=\"records\", dtype={\"entry2\": list})\n",
-    "asdict = df.to_dict(orient=\"records\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "initial-sterling",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{('alalal0', (0, 1, 2, 3)): {'entry3': 1919, 'entry4': 0},\n",
-       " ('alalal1', (1, 2, 3, 4)): {'entry3': 1920, 'entry4': 1},\n",
-       " ('alalal2', (2, 3, 4, 5)): {'entry3': 1921, 'entry4': 4},\n",
-       " ('alalal3', (3, 4, 5, 6)): {'entry3': 1922, 'entry4': 9},\n",
-       " ('alalal4', (4, 5, 6, 7)): {'entry3': 1923, 'entry4': 16},\n",
-       " ('alalal5', (5, 6, 7, 8)): {'entry3': 1924, 'entry4': 25},\n",
-       " ('alalal6', (6, 7, 8, 9)): {'entry3': 1925, 'entry4': 36},\n",
-       " ('alalal7', (7, 8, 9, 10)): {'entry3': 1926, 'entry4': 49},\n",
-       " ('alalal8', (8, 9, 10, 11)): {'entry3': 1927, 'entry4': 64},\n",
-       " ('alalal9', (9, 10, 11, 12)): {'entry3': 1928, 'entry4': 81}}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2 = dict()\n",
-    "for row in asdict:\n",
-    "    key = tuple((row[\"entry1\"], tuple(row[\"entry2\"])))\n",
-    "    d2[key] = {k: row[k] for k in (\"entry3\", \"entry4\")}\n",
-    "\n",
-    "d2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "surgical-mouse",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{('alalal0', (0, 1, 2, 3)): {'entry3': 1919, 'entry4': 0},\n",
-       " ('alalal1', (1, 2, 3, 4)): {'entry3': 1920, 'entry4': 1},\n",
-       " ('alalal2', (2, 3, 4, 5)): {'entry3': 1921, 'entry4': 4},\n",
-       " ('alalal3', (3, 4, 5, 6)): {'entry3': 1922, 'entry4': 9},\n",
-       " ('alalal4', (4, 5, 6, 7)): {'entry3': 1923, 'entry4': 16},\n",
-       " ('alalal5', (5, 6, 7, 8)): {'entry3': 1924, 'entry4': 25},\n",
-       " ('alalal6', (6, 7, 8, 9)): {'entry3': 1925, 'entry4': 36},\n",
-       " ('alalal7', (7, 8, 9, 10)): {'entry3': 1926, 'entry4': 49},\n",
-       " ('alalal8', (8, 9, 10, 11)): {'entry3': 1927, 'entry4': 64},\n",
-       " ('alalal9', (9, 10, 11, 12)): {'entry3': 1928, 'entry4': 81}}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "spoken-asian",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dhdrnet.dataset import CachingDataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "modified-jones",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting up [LPIPS] perceptual loss: trunk [alex], v[0.1], spatial [off]\n",
-      "Loading model from: /home/shane/.cache/pypoetry/virtualenvs/dhdrnet-CxDQYEDG-py3.8/lib/python3.8/site-packages/lpips/weights/v0.1/alex.pth\n"
-     ]
-    }
-   ],
-   "source": [
-    "ds = CachingDataset(data_dir=Path(\"../../data\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "hungarian-rings",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds.data_generator.best_evs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "grave-raleigh",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((379, 506, 3), {'score': 31.410558923299902, 'evs': (-2, 4)})"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ims, d = ds[1000]\n",
-    "ims[0].shape, d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "three-exposure",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'score'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "broad-disability",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'score': 24.749260146463783, 'evs': (0, 4)}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d"
+    "for batch in dl:\n",
+    "    images, evs = batch\n",
+    "    print(images[0].shape)\n",
+    "    print(evs)\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medical-savage",
+   "id": "equipped-listing",
    "metadata": {},
    "outputs": [],
    "source": []
